♻️ refactor(dashboard): remove SSE metrics dashboard
- Remove metrics controller and related routes
- Remove react component and actions related to metrics
- Remove related specs
- Move logic to background jobs and widgets
